[gd_scene load_steps=3 format=3 uid="uid://trainingscene"]

[ext_resource type="Script" path="res://scripts/Training.gd" id="1"]
[ext_resource type="Theme" uid="uid://theme" path="res://themes/DefaultTheme.tres" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.2, 0.2, 0.3, 1)

[node name="Training" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="AlgorithmLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Algorithm"
horizontal_alignment = 1

[node name="MoodLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mood: 50"
horizontal_alignment = 1

[node name="ReachLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Reach: 0/100"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="FeedButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Feed (Improve Mood)"

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play (Improve Reach)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Game"
</node>